# GlassSorter

./: CMakeLists.txt  Glass.h  README.md  SorterSolver.cpp  SorterSolver.h  SorterSolver.sln  SorterSolver.vcxproj  SorterSolver.vcxproj.filters  SortingProblem.h  SortingProblemSolution.h  SortingProblemState.h  StateProvider.h  main.cpp
Sorter-Solver/: CMakeLists.txt  Glass.h  SortingProblem.cpp  main.cpp
Sorter-Unit-Test/: CMakeLists.txt  Sorter-Unit-Test.vcxproj  test.cpp  test_glass.cpp  test_provider.cpp  test_state.cpp
